# lsd_assignment2

./: .gitignore  readme.md
check_in_backend/: Cargo.toml  build.rs  config.toml
check_in_backend/migrations/: 20211108230240_groups.up.sql  20211109133829_people.up.sql  20211109133935_check_ins.up.sql  20211110220306_people_m2m_groups.up.sql  20211113155357_groups_m2m_check_ins.up.sql  20211116211850_people_m2m_check_ins.up.sql
check_in_backend/proto/: group.proto  student.proto  teacher.proto  user.proto
check_in_backend/src/: main.rs
check_in_backend/src/connection/: mod.rs  mongo_connection.rs  pg_connection.rs
check_in_backend/src/entities/: check_in.rs  group.rs  mod.rs  person.rs  student.rs  teacher.rs  user.rs
check_in_backend/src/logic/: cryptography.rs  group_handler.rs  mod.rs  person_handler.rs  student_handler.rs  teacher_handler.rs  user_handler.rs
check_in_backend/src/logic/handlers/: group_handler.rs  person_handler.rs  student_handler.rs  teacher_handler.rs
check_in_backend/src/routes/: group_routes.rs  mod.rs  person_routes.rs  student_routes.rs  teacher_routes.rs  user_routes.rs
check_in_backend/src/utils/: config.rs  time.rs
check_in_gui/: config.toml  protogen.sh  pyproject.toml  requirements.txt
check_in_gui/check_in_gui/: main.py
check_in_gui/check_in_gui/interface/: check_in.kv  check_in_main.py
check_in_gui/check_in_gui/interface/screens/: login.kv  login.py
check_in_gui/proto/: group.proto  student.proto  teacher.proto  user.proto
check_in_gui/src/: cli.py  main.py
check_in_gui/src/interface/: __init__.py  check_in.kv  check_in_main.py
check_in_gui/src/interface/screens/: about.kv  about.py  create_user.kv  create_user.py  login.kv  login.py  student_dashboard.py  student_stats.py  (+4 more)
check_in_gui/src/logic/: charts.py  ip_check.py
check_in_gui/src/models/: user.py
check_in_gui/src/utils/: config.py
check_in_gui/tests/: test_check_in_gui.py
(+37 files in other folders)
