[package]
name = "check_in_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#primary
tonic="0.5.2"
tokio="1.12.0"
prost="0.9.0"

#utils
toml="0.5.8"

#serde
serde = "1.0.130"
serde_derive="1.0.130"
serde_json="1.0.68"


[dev-dependencies]
tonic-build="0.5.2"