[tool.poetry]
name = "check_in_gui"
version = "0.1.0"
description = ""
authors = ["= <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
matplotlib = "^3.4.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
